; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/ntpd/extr_ntp_restrict.c_dec_res_limited.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/ntpd/extr_ntp_restrict.c_dec_res_limited.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@res_limited_refcnt = common dso_local global i32 0, align 4
@MON_RES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @dec_res_limited to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dec_res_limited() #0 {
  %1 = load i32, i32* @res_limited_refcnt, align 4
  %2 = add nsw i32 %1, -1
  store i32 %2, i32* @res_limited_refcnt, align 4
  %3 = load i32, i32* @res_limited_refcnt, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %8, label %5

5:                                                ; preds = %0
  %6 = load i32, i32* @MON_RES, align 4
  %7 = call i32 @mon_stop(i32 %6)
  br label %8

8:                                                ; preds = %5, %0
  ret void
}

declare dso_local i32 @mon_stop(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
